# Software-Factory

./: .env.example  .gitignore  README.md  pyproject.toml
delivery-evidence/: PR-body.md  commit-hash.txt  factory-run-log.txt  file-tree.txt  final-summary.md  git-status-before.txt  governance-evidence.json  install-log.txt  memory-evidence.json  model-routing-log.json  push-instructions.md  success-criteria-audit.md  verifier-report.json
delivery-evidence-v1.1/: coding-diff.real.patch  coding-report.real.json  file-tree.txt  final-summary.real.md  memory-evidence.json  mock-run-log.txt  model-routing-log.real.json  real-run-log.txt  success-criteria-audit.md  test-log.txt  test-report.real.json  verifier-report.real.json
delivery-evidence-v1.2/: attempt-0-coding-report.json  attempt-0-test-report.json  attempt-1-coding-report.json  attempt-1-test-report.json  final-summary.md  iteration-report.json  iteration-report.retry.json  repo_file_inventory.json  repo_impact_audit.md  success-criteria-audit.md  verifier-report.json  verifier-report.retry.json
docs/: architecture.md  autonomy-levels.md  executors.md  governance.md  memory.md  model-router.md  runbook.md
examples/: demo-signal.json  sample-factory-run.json  sample-plan.json  sample-signal.json
scripts/: dev.sh  run-factory.sh  test.sh
tests/: _iteration_stub.py  _stub_claude.py  conftest.py  test_executor_claude_code.py  test_executor_mock.py  test_factory_run.py  test_github_pr.py  test_governance.py  test_iteration_on_failure.py  test_memory.py  test_real_agents.py  test_router.py  (+2 more)
(+25 files in other folders)
