[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "software-factory"
version = "0.1.0"
description = "v1 Software Factory: signal -> triage -> plan -> code -> test -> review -> security -> docs -> ship -> verify"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
factory = "factory_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
